// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<Row
  className="public-header"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Link
      className="navbar-brand"
      href="/"
      replace={false}
      to="/"
    >
      RPTHREADTRACKER.COM
    </Link>
  </Col>
  <Col
    className="text-right"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <h1
      className="navbar-brand"
      href="/public/my-slug"
    >
      My Title
    </h1>
  </Col>
</Row>
`;

exports[`rendering snapshots should render valid snapshot when loading icon is visible 1`] = `
<Row
  className="public-header"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <Link
      className="navbar-brand"
      href="/"
      replace={false}
      to="/"
    >
      RPTHREADTRACKER.COM
    </Link>
  </Col>
  <Col
    className="text-right"
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <div
      className="float-right"
      data-spec="header-loading-indicator"
    >
      <LoadingIndicator
        className="invert"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      />
    </div>
    <h1
      className="navbar-brand"
      href="/public/my-slug"
    >
      My Title
    </h1>
  </Col>
</Row>
`;
